[package]
name = "mini890"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.22"
figlet-rs = "0.1.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
